--- a/style.css
+++ b/style.css
@@ -7,6 +7,51 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-size: 24px;
 }
 
-/* Add styles here! */
+.title {
+  font-size: 2rem;
+}
+
+.intro-chunk {
+  
+}
+
+header {
+  padding: 0 32px;
+  margin-top: 140px;
+}
+
+p {
+  margin-bottom: 40px;
+}
+
+main {
+  border-top: 16px solid hsl(0deg, 0%, 30%);
+  background: hsl(0deg, 0%, 60%) ;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+/* Wealth comes from operations */
+.indented-heading {
+  font-size: 1.5rem;
+  background-color: hsl(45deg, 100%, 50%);
+  margin-left: -16px;
+  margin-top: 80px;
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
+
+.card {
+  background-color: white;
+}
+
+.max-width-wrapper {
+  padding-top: 16px;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
